Refactor TestProject to remove caching of walked files and simplify getAllFiles method
- Eliminated the walkedFilesCache variable to streamline file retrieval logic.
- Updated getAllFiles method to directly return an empty set on exceptions instead of caching an empty set.
- Adjusted TestProjectGetAllFilesTest to remove tests related to caching behavior, focusing on file retrieval from a dedicated temp directory.